--- a/home.html
+++ b/home.html
@@ -84,11 +84,11 @@
             </div>
             <div class="july">
               <h2><span class="red">Fourth</span><span class="white"> of</span><span class="blue"> July</span></h2>
-              <p>We're celebrate this wildly fantastic American holiday by having a firework show every <b>Saturday</b>. Come join us
+              <p>We're celebrate this wildly fantastic American holiday by having a firework show every <b>Saturday</b> of July. Come join us!
               </p>
               <div>
                 <p>July 4<sup>th</sup>, 2015</p>
-                <video src="images/fireworks.mp4" height="350px" width="480px" controls> Your browser does not support this type of video file.
+                <video data-no-fullscreen="true" controls style="width: 460px; height: 340px; left: 3.88888888888891px; top: 0px; transform: none;" src="https://r6---sn-vgqs7n7z.c.docs.google.com/videoplayback?requiressl=yes&amp;id=c318c2a5af6e3609&amp;itag=37&amp;source=webdrive&amp;app=docs&amp;ip=129.105.10.121&amp;ipbits=0&amp;expire=1436194688&amp;sparams=requiressl,id,itag,source,ip,ipbits,expire&amp;signature=45AAF25D46FB03D2C7BCF69FE014210D15122086.5194EBD28BA00D67B0CA676B39B269F0E6E9A414&amp;key=ck2&amp;mm=30&amp;mn=sn-vgqs7n7z&amp;ms=nxu&amp;mt=1436190482&amp;mv=u&amp;nh=IgpwcjAxLm9yZDEyKgkxMjcuMC4wLjE&amp;pl=23&amp;cpn=Id3bQMCVni4Brzmz&amp;c=WEB&amp;cver=html5">Your browser does not support this type of video file.
                 </video>
               </div>
             <!-- Think of adding a footer -->
