--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html>
     
     <head>
-        <Title>Llama Experience: News Post</Title>
+        <Title>Llama Experience: Contact</Title>
         <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
     </head>
     
