commit for safety

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <head>
         <Title>Llama Experience: Contact</Title>
         <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
+        <link rel="shortcut icon" href="assets/images/llama.ico">
     </head>
     
     <body>
