--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <Title>The Llama Experience</Title>
         <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
+        <link rel="shortcut icon" href="assets/images/llama.ico">
     </head>
     
     <body>
