--- a/news.html
+++ b/news.html
@@ -5,6 +5,8 @@
     <head>
         <Title>Llama Experience: News Post</Title>
         <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
+        <link rel="shortcut icon" href="../
+        assets/images/llama.ico">
     </head>
     
     <body>
