--- a/tours.html
+++ b/tours.html
@@ -5,6 +5,7 @@
     <head>
         <Title>Llama Experience: Tours</Title>
         <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
+        <link rel="shortcut icon" href="assets/images/llama.ico">
     </head>
     
     <body>
@@ -29,7 +30,7 @@
             
             <div class="tour">
                 <h3 id="riding_tour">Llama Riding Tours</h3>
-                <button><a href="tours/confirm.html"><b>Book a Tour</b></a></button>
+                <button><a href="tours/reservation.html"><b>Book a Tour</b></a></button>
                 <div class="inner_tour">
                     <img class="llamapics" src="assets/images/llama_riding.jpg">
                     <p id="desc_2-1"><span class="desc"> A peaceful way to feel the breeze against your face as you and your llama companion travel up the many hills around the farm. Explore the forest as your guide describes the farm and explains its purpose. A guide will be assigned to you and your group and will be available the day you check into the tour. The guide will also review how to mount and ride a llama. We recommend your bring a waterbottle or any other neccessities you may require, for this is a fairly long tour. <b> A waver is required.</b></span></p>
@@ -53,7 +54,7 @@
             <!--Beginning of new tour-->
             <div class="tour">
                 <h3 id="nature_tour">Nature Walk</h3>
-                <button><a href="tours/confirm.html"><b>Book a Tour</b></a></button>
+                <button><a href="tours/reservation.html"><b>Book a Tour</b></a></button>
                 <div class="inner_tour">
                     <img class="llamapics" src="assets/images/llama_kiss.jpg">
                     <p id="desc_2-2"><span class="desc"> Bring your camera and possibly a journal to record all the fantastic scenery and wildlife to be expected in this tour! Walk around the farm and woods with a guide in this serene setting as you view the farm's llamas and any other wildlife you'll encounter. Also it is recommended for you to bring a waterbottle or any other neccessary items along this significantly long walk. Bear in mind there will be multiple stops along the tour to ensure everyone is satisfied. A guide will be assigned to you and your group and will be available the day you check into the tour. Click here or the name for more info on Nature Walk.</span></p>
@@ -77,9 +78,9 @@
             <!--Beginning of new tour-->
             <div class="tour">
                <h3 id="farm_tours">Llama Farm Tours</h3>
-               <button><a href="tours/confirm.html"><b>Book a Tour</b></a></button>
+               <button><a href="tours/reservation.html"><b>Book a Tour</b></a></button>
                <div class="inner_tour">
-                   <img class="llamapics" src="http://static1.squarespace.com/static/5181d5b7e4b07b8c66ed5614/528ed0d0e4b02c65a6740af3/5351817ee4b0337f7ff737f4/1397851123986/llama.png">
+                   <img class="llamapics" src="http://placehold.it/125x125">
                    <!--^^ Insert llama image from iPhone here ^^-->
                    <p id="desc_2-3"><span class="desc"> Tour our llama farm and facilities as your designated guide explains the process of taking care of the llamas and shows you how the residents of Goldsmith's farm would have lived their everyday lives tending to llamas. A guide will be assigned to you and your group and will be available the day you check into the tour. Click <a href="tours.html">here</a> for more info on Llama Farm Tours. </span></p>
                </div>
