--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </tr>
               <tr>
                 <td class="label"><b>Llama Riding Tours</b></td>
-                <td><span class="desc"> A peaceful way to feel the breeze against your face as you and your llama companion travel up the many hills around the farm. <br>Explore the forest as your guide describes the farm and explains its purpose.  <br> A guide will be assigned to you and your group and will be available the day you check into the tour. <br> The guide will also review how to mount and ride a llama.<br> We recommend your bring a waterbottle or any other neccessities you may require, for this is a fairly long tour. <br><b> A waver is required.</b><br> Click <a href="tours.html"> here</a> for more info on Llama Riding Tours.</span></td>
+                <td><span class="desc"> A peaceful way to feel the breeze against your face as you and your llama companion travel up the many hills around the farm. <br>Explore the forest as your guide describes the farm and explains its purpose.  <br> A guide will be assigned to you and your group and will be available the day you check into the tour. <br> The guide will also review how to mount and ride a llama.<br> We recommend your bring a waterbottle or any other neccessities you may require, for this is a fairly long tour. <br><b> A waiver is required.</b><br> Click <a href="tours.html"> here</a> for more info on Llama Riding Tours.</span></td>
               </tr>
               <tr>
                 <td class="label"><b>Nature Walk</b></td>
