--- a/tours.html
+++ b/tours.html
@@ -30,10 +30,10 @@
             
             <div class="tour">
                 <h3 id="riding_tour">Llama Riding Tours</h3>
-                <button><a href="tours/reservation.html"><b>Book a Tour</b></a></button>
+                <a href="tours/reservation.html"><button><b>Book a Tour</b></button></a>
                 <div class="inner_tour">
                     <img class="llamapics" src="assets/images/llama_riding.jpg">
-                    <p id="desc_2-1"><span class="desc"> A peaceful way to feel the breeze against your face as you and your llama companion travel up the many hills around the farm. Explore the forest as your guide describes the farm and explains its purpose. A guide will be assigned to you and your group and will be available the day you check into the tour. The guide will also review how to mount and ride a llama. We recommend your bring a waterbottle or any other neccessities you may require, for this is a fairly long tour. <b> A waver is required.</b></span></p>
+                    <p id="desc_2-1"><span class="desc"> A peaceful way to feel the breeze against your face as you and your llama companion travel up the many hills around the farm. Explore the forest as your guide describes the farm and explains its purpose. A guide will be assigned to you and your group and will be available the day you check into the tour. The guide will also review how to mount and ride a llama. We recommend your bring a waterbottle or any other neccessities you may require, for this is a fairly long tour. <b> A waiver is required.</b></span></p>
                 </div>
                 <table width="100%">
                     <tr>
@@ -54,7 +54,7 @@
             <!--Beginning of new tour-->
             <div class="tour">
                 <h3 id="nature_tour">Nature Walk</h3>
-                <button><a href="tours/reservation.html"><b>Book a Tour</b></a></button>
+                <a href="tours/reservation.html"><button><b>Book a Tour</b></button></a>
                 <div class="inner_tour">
                     <img class="llamapics" src="assets/images/llama_kiss.jpg">
                     <p id="desc_2-2"><span class="desc"> Bring your camera and possibly a journal to record all the fantastic scenery and wildlife to be expected in this tour! Walk around the farm and woods with a guide in this serene setting as you view the farm's llamas and any other wildlife you'll encounter. Also it is recommended for you to bring a waterbottle or any other neccessary items along this significantly long walk. Bear in mind there will be multiple stops along the tour to ensure everyone is satisfied. A guide will be assigned to you and your group and will be available the day you check into the tour. Click here or the name for more info on Nature Walk.</span></p>
@@ -78,7 +78,7 @@
             <!--Beginning of new tour-->
             <div class="tour">
                <h3 id="farm_tours">Llama Farm Tours</h3>
-               <button><a href="tours/reservation.html"><b>Book a Tour</b></a></button>
+               <a href="tours/reservation.html"><button><b>Book a Tour</b></button></a>
                <div class="inner_tour">
                    <img class="llamapics" src="http://placehold.it/125x125">
                    <!--^^ Insert llama image from iPhone here ^^-->
