--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html>
     
     <head>
-        <Title>Llama Experience: Contact</Title>
+        <title>Llama Experience: Contact</title>
         <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
         <link rel="shortcut icon" href="assets/images/llama.ico">
     </head>
