--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <html>
     
     <head>
-        <Title>Llama Experience: News Post</Title>
+        <title>Llama Experience: News Post</title>
         <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
         <link rel="shortcut icon" href="../
         assets/images/llama.ico">
