--- a/tours/reservation_one.html
+++ b/tours/reservation_one.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <Title>Tour Booking</Title>
+        <title>Tour Booking</title>
         <link rel="stylesheet" href="../stylesheets/style.css" type="text/css" />
         <link rel="shortcut icon" href="../assets/images/llama.ico">
     </head>
