--- a/tours/confirmed.html
+++ b/tours/confirmed.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <Title>Confirmed Tour Booking</Title>
+        <title>Confirmed Tour Booking</title>
         <link rel="stylesheet" href="../stylesheets/style.css" type="text/css" />
         <link rel="shortcut icon" href="../assets/images/llama.ico">
     </head>
