Slight Homework #9 Adjustment

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
                   <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23882.49007665257!2d-88.00000700458816!3d41.56250764251881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x94d68fd9b22a52d5!2sCALYPSO+FARM!5e0!3m2!1sen!2sus!4v1435935742670" width="400" height="300" frameborder="0" style="border:0" allowfullscreen>
                   </iframe>
             </div>
-            <div class="july">
+            <section class="july">
               <h2><span class="red">Fourth</span><span class="white"> of</span><span class="blue"> July</span></h2>
               <p>We're celebrating this wildly fantastic American holiday by having a firework show every <b>Saturday</b> of July at approximately<b> 8:30 P.M</b>. Come join us!<br> If you care to watch the video below, use the password "llama_experience". 
               </p>
               <div>
                 <p>July 4<sup>th</sup>, 2015</p>
                 <iframe src="https://player.vimeo.com/video/132829624" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-              </div>
+              </section>
             <!-- Think of adding a footer -->
             <footer></footer>
         </section> 
