--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                    </ul>
             </nav>
               
-            <div="contactus">
+            <div class="contactus">
               <span>
                 <h2>Contact Us</h2>
                 <p>Give us a ring! We'd love to hear about your llama experience <br> and would gladly answer any questions.</p>
