--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
     <head>
         <title>Llama Experience: News Post</title>
         <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
-        <link rel="shortcut icon" href="../
+        <link rel="shortcut icon" href="
         assets/images/llama.ico">
     </head>
     
@@ -23,9 +23,10 @@
             <nav class="bar">
                <ul>
                  <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="news.html" class="active">News</a></li>
-                <li><a href="tours.html" class="active">Llama Tours</a></li>
-                <li><a href="contact.html" class="active">Contact Us</a></li>
+                 <li><a href="the_llamas.html" class="active">Our Llamas</a></li>
+                 <li><a href="news.html" class="active">News</a></li>
+                 <li><a href="tours.html" class="active">Llama Tours</a></li>
+                 <li><a href="contact.html" class="active">Contact Us</a></li>
                </ul>
             </nav>
             
