--- a/tours.html
+++ b/tours.html
@@ -14,7 +14,7 @@
         <section class="container">
             
             <header>
-                <img id="logo" src="http://new1.fjcdn.com/thumbnails/comments/That+s+clearly+a+goat+like+this+one+_64ddfb6aaadc4c8d0f33de470eca296b.jpg" />
+                <img id="logo" src="http://new1.fjcdn.com/thumbnails/comments/That+s+clearly+a+goat+like+this+one+_64ddfb6aaadc4c8d0f33de470eca296b.jpg" alt="The Llama Experience Logo" />
                 <h1>The Llama Experience</h1>
                 <h5><i>...the most genuine llama adventures</i></h5>
             </header>
@@ -22,9 +22,10 @@
             <nav class="bar">
                <ul>
                  <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="news.html" class="active">News</a></li>
-                <li><a href="tours.html" class="active">Llama Tours</a></li>
-                <li><a href="contact.html" class="active">Contact Us</a></li>
+                 <li><a href="the_llamas.html" class="active">Our Llamas</a></li>
+                 <li><a href="news.html" class="active">News</a></li>
+                 <li><a href="tours.html" class="active">Llama Tours</a></li>
+                 <li><a href="contact.html" class="active">Contact Us</a></li>
                </ul>
             </nav>
             
