--- a/tours/reservation_two.html
+++ b/tours/reservation_two.html
@@ -21,10 +21,10 @@
             <nav class="bar">
                 <ul>
                     <li><a href="../index.html" class="active">Home</a></li>
+                    <li><a href="../the_llamas.html" class="active">Our Llamas</a></li>
                     <li><a href="../news.html" class="active">News</a></li>
                     <li><a href="../tours.html" class="active">Llama Tours</a></li>
-                    <li><a href="../contact.html" class="active">Contact Us</a></li>
-                </ul>
+                    <li><a href="../contact.html" class="active">Contact Us</a></li>                </ul>
             </nav>
             
             <hgroup id="confirm_head">
