Update, added media query, deleted news.html

--- a/tours/reservation_two.html
+++ b/tours/reservation_two.html
@@ -20,12 +20,12 @@
             
       <nav class="bar">
         <ul>
-          <li><a href="../index.html" class="active">Home</a></li>
-          <li><a href="../the_llamas.html" class="active">Our Llamas</a></li>
-          <li><a href="../news.html" class="active">News</a></li>
-          <li><a href="../tours.html" class="active">Llama Tours</a></li>
-          <li><a href="../contact.html" class="active">Contact Us</a></li>                </ul>
-        </nav>
+          <a href="../index.html" class="active"><li>Home</li></a>
+          <a href="../the_llamas.html" class="active"><li>Our Llamas</li></a>
+          <a href="../tours.html" class="active"><li>Llama Tours</li></a>
+          <a href="../contact.html" class="active"><li>Contact Us</li></a>
+        </ul>
+      </nav>
             
       <hgroup id="confirm_head">
         <h2>Please Provide Sufficient Info</h2>
