--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
                
         <nav class="bar">
           <ul>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="the_llamas.html" class="active">Our Llamas</a></li>
-            <li><a href="news.html" class="active">News</a></li>
-            <li><a href="tours.html" class="active">Llama Tours</a></li>
-            <li><a href="contact.html" class="active">Contact Us</a></li>
+            <a href="index.html" class="active"><li>Home</li></a>
+            <a href="the_llamas.html" class="active"><li>Our Llamas</li></a>
+            <a href="tours.html" class="active"><li>Llama Tours</li></a>
+            <a href="contact.html" class="active"><li>Contact Us</li></a>
           </ul>
         </nav>
         
@@ -56,7 +55,7 @@
           </tr>
           <tr>
             <td class="label"><b>Llama Riding Tours</b></td>
-            <td><span class="desc"> A peaceful way to feel the breeze against your face as you and your llama companion travel up the many hills around the farm. <br>Explore the forest as your guide describes the farm and explains its purpose.  <br> A guide will be assigned to you and your group and will be available the day you check into the tour. <br> The guide will also review how to mount and ride a llama.<br> We recommend your bring a waterbottle or any other neccessities you may require, for this is a fairly long tour. <br><b> A waiver is required.</b><br> Click <a href="tours.html"> here</a> for more info on Llama Riding Tours.</span></td>
+            <td><span class="desc"> A peaceful way to feel the breeze against your face as you and your llama companion travel up the many hills around the farm. <br>Explore the forest as your guide describes the farm and explains its purpose.  <br> A guide will be assigned to you and your group and will be available the day you check into the tour. <br> The guide will also review how to mount and ride a llama.<br> We recommend your bring a waterbottle or any other neccessities you may require, for this is a fairly long tour. <br><strong> A waiver is required.</strong><br> Click <a href="tours.html"> here</a> for more info on Llama Riding Tours.</span></td>
           </tr>
           <tr>
             <td class="label"><b>Nature Walk</b></td>
