--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                   <a href="the_llamas.html">Our Llamas <span class="arrow">&#9660</span></a>
                 
                   <ul class="sub-menu">
-                    <a href="#"><li>Cassie</li></a>
-                    <a href="#"><li>Tori</li></a>
-                    <a href="#"><li>Gerald</li></a>
-                    <a href="#"><li>Vincent</li></a>
-                    <a href="#"><li>J.C.</li></a>
+                    <a href="llamas/grace.html"><li>Grace</li></a>
+                    <a href="llamas/tori.html"><li>Tori</li></a>
+                    <a href="llamas/gerald.html"><li>Gerald</li></a>
+                    <a href="llamas/vincent.html"><li>Vincent</li></a>
+                    <a href="llamas/jc.html"><li>J.C.</li></a>
                   </ul>
                 
                 </li>
